# SDRPlay_wrapper

./: README.md  pyproject.toml
src/: _wrapper.py  radio.py  rspDuo.py  rspdx.py  sdrplay_api.py  sdrplay_api_callback.py  sdrplay_api_dev.py  sdrplay_api_rx_channel.py  sdrplay_api_tuner.py
src/SDRPlay_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/SDRPlay_wrappy/: __init__ .py  _wrapper.py  radio.py  rsp1a.py  rsp2a.py  rspdx.py  sdrplay_api.py  sdrplay_api_callback.py  sdrplay_api_control.py  sdrplay_api_dev.py  sdrplay_api_rx_channel.py  sdrplay_api_tuner.py
tests/: test.py
