[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SDRPlay_wrapper"
version = "0.1"
description = "Python ctypes wrapper for SDRPlay C++ API"
authors = [{ name = "BrLeh", email = "brendan.lehuede@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["SDRPlay_wrappy"]
include-package-data = true

